1:25::00_making_Hero_block

--- a/html/module-01/lesson-01/index.html
+++ b/html/module-01/lesson-01/index.html
@@ -89,19 +89,49 @@
     <!-- Main section  -->
     <main>
       <!-- Hero section -->
-      <section></section>
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+
+        <button type "button">Buy now</button>
+        <button type "button">How it’s made</button>
+
+      <a href="#">
+        scroll down 
+        <img 
+          src="./images/icons/arrow-down.svg" 
+          alt="Arrow down"
+          width="22"
+          height="22"
+        />
+      </a>
+      </section>
       <!-- Benefits section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
       <!-- Ingredients section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
       <!-- Make section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
       <!-- Products section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
       <!-- Bestsellers section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
       <!-- Reviews section -->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
     </main>
     <!-- Footer section  -->
     <footer></footer>
