--- a/html/module-02/lesson-1/index.html
+++ b/html/module-02/lesson-1/index.html
@@ -200,14 +200,15 @@
     </section>
 
     <!-- Products section -->
-    <section>
+    <section class="products">
       <h2>Our <span>products</span></h2>
       <ul>
         <li>
           <img src="./images/products/img-1.jpg" alt="" width="230" height="201" />
           <h3>Orange</h3>
           <p>Dark chocolate</p>
-          <button type="button">45 UAH</button>
+          <button class="product-btn" type="button">45 UAH
+          </button>
         </li>
         <li>
           <img src="./images/products/img-2.jpg" alt="" width="230" height="201" />
