--- a/html/module-02/lesson-2/index.html
+++ b/html/module-02/lesson-2/index.html
@@ -10,13 +10,16 @@
   <title>Simply Chocolate</title>
   <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg+xml" />
 
-  <!-- Critical Css -->
+  <!-- Critical Css
   <style>
     a {
       color: rgb(23, 85, 255);
       font-size: 24px;
     }
-  </style>
+  </style> -->
+  <!-- External libs | Normalize CSS -->
+  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/styles.css">
